rename publication -> publications

--- a/layouts/partials/index/members.html
+++ b/layouts/partials/index/members.html
@@ -4,23 +4,24 @@
         <!-- Section heading -->
         <div class="row">
             <div class="col-xs-12 col-md-4 section-heading">
-                <h1 class="section-heading"><a href="{{.Site.BaseURL}}/member/{{if .Site.Params.uglyURLs}}index.html{{end}}"> Team </a></h1>
+                <h1 class="section-heading"><a
+                        href="{{.Site.BaseURL}}/members/{{if .Site.Params.uglyURLs}}index.html{{end}}"> Team </a></h1>
             </div>
         </div>
 
         <!-- Members -->
         <div class="row">
-            {{ range (sort (where .Site.RegularPages "Type" "member") ".Params.sort_position")}}
-                {{ if not .Params.is_former_member }}
-                    {{ partial "member_simple" . }}
-                {{ end }}
+            {{ range (sort (where .Site.RegularPages "Type" "members") ".Params.sort_position")}}
+            {{ if not .Params.is_former_member }}
+            {{ partial "member_simple" . }}
+            {{ end }}
             {{ end }}
         </div>
 
         <!-- Link to all members -->
         <div>
             <p class="view-all">
-                <a href="{{ .Site.BaseURL }}/member/{{if .Site.Params.uglyURLs}}index.html{{end}}">
+                <a href="{{ .Site.BaseURL }}/members/{{if .Site.Params.uglyURLs}}index.html{{end}}">
                     Full team
                     <i class="fa fa-angle-double-right"></i>
                 </a>
