--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,8 +8,8 @@
 <!-- Publications Section -->
 {{ partial "index/publications.html" . }}
 
-<!-- Blog Posts Section -->
-{{ partial "index/posts.html" . }}
+<!-- News Section -->
+{{ partial "index/news.html" . }}
 
 <!-- Members -->
 {{ partial "index/members.html" . }}
